--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: black;
+  /* background-color: rgb(0, 0, 41); */
+  min-width: 100vw;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.App .mainObject {
+  height: 40vh;
+  width: 43vw;
+  /* background-color: white; */
+}
+
+.App .TitleForm {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.TitleForm img {
+  height: 1.7rem;
+  margin-right: 0.7rem;
+}
+
+.App .formWrap {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 17rem;
+}
+
+.formWrap .token {
+  font-size: 9px;
+  padding-right: 4.5rem;
+}
+
+.btcSelect {
+  width: 9rem;
+  height: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.maticSelect {
+  width: 9rem;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .AllSelect {
+  display: flex;
+  min-width: 100%;
+  height: 5rem;
+  justify-content: space-between;
+  background-color: #1e1e30;
+  border-radius: 16px;
+}
+
+.App .divider {
+  width: 1.5px;
+  background-color: #302e54;
+  position: relative;
+}
+
+.divider img {
+  height: 1.7rem;
+  position: absolute;
+  right: -13.5px;
+  top: 24px;
+  border-radius: 30px;
+  box-shadow: 0 7px 10px rgb(0, 0, 0);
+}
+
+.App label {
+  /* color: #fff; */
+  color: #454a6b;
+  font-weight: 500;
+}
+
+.App .initialDTfont {
+  font-size: 7px;
+  padding-right: 5.7rem;
+}
+
+.App .depositInput {
+  width: 100%;
+  height: 5rem;
+  background-color: #1e1e30;
+  border-radius: 16px;
+}
+
+.depositInput input {
+  max-width: 9rem;
+  height: 2.1rem;
+  border-radius: 9px;
+  background-color: #302e54;
+  padding-left: 7px;
+  color: #fff;
+  margin-left: 5px;
+  margin-top: 5px;
+  border: 1px solid #3b3868;
+  /* margin-left: 10px; */
+}
+
+.depositInput input:focus {
+  outline: none;
+}
+
+.App .flex {
+  display: flex;
+  flex-direction: column;
+  width: 11.5rem;
+  height: 4rem;
+}
+
+.selectbox select {
+  /* -webkit-appearance: none; */
+  /* -moz-appearance: none; */
+  /* appearance: none; Remove default arrow */
+  background-image: none; /* Add custom arrow */
+
+  max-width: 4.9rem;
+
+  /* height: 2.5rem; */
+  background-color: #302e54;
+  padding-left: 7px;
+  color: #fff;
+  /* margin-top: 4px; */
+  border: none;
+}
+
+.selectbox select:focus {
+  outline: none;
+}
+
+.App .selectbox {
+  max-width: 7rem;
+  height: 2.3rem;
+  background-color: #302e54;
+  display: flex;
+  align-items: center;
+  border-radius: 9px;
+  margin-top: 5px;
+  border: 1px solid #3b3868;
+}
+
+.selectbox img {
+  height: 1.1rem;
+  margin: 0 0 2px 10px;
+}
+
+.mainObject button {
+  width: 6rem;
+  height: 2rem;
+  color: #fff;
+  background-image: linear-gradient(#9d84fc, #5a3dc3);
+  border: none;
+  border-radius: 10px;
+}
+
+.mainObject .createLotSubmit {
+  padding-top: 1.2rem;
 }
